# TextViewOld

./: .gitignore  CMakeLists.txt  Source.cpp  Test_ColoredChar.cpp  Test_ColoredChar.h  Test_LineView.cpp  Test_LineView.h  Test_Mutation.cpp  Test_Mutation.h  Test_TextView.cpp  Test_TextView.h  Test_TextViewLayout.cpp  Test_TextViewLayout.h
TextView/: CMakeLists.txt  Color.cpp  Color.h  ColoredChar.cpp  ColoredChar.h  HorizontalLineMutation.cpp  HorizontalLineMutation.h  LineMutation.cpp  LineMutation.h  LineView.cpp  LineView.h  Mutation.h  RectangleLineMutation.cpp  RectangleLineMutation.h  RectangleMutation.cpp  RectangleMutation.h  Source.cpp  TextView.cpp  TextView.h  TextViewLayout.cpp  TextViewLayout.h  View.h
